...

class RootViewController: UIViewController {
    private var presenter: RootInputCollection!
    private let cell = "userCell"

    @IBOutlet weak private var userTableView: UITableView!
    @IBOutlet weak private var loadingView: LoadingView!
    @IBOutlet weak private var totalCountLabel: UILabel!
    @IBOutlet weak private var initialImageView: UIImageView!
    @IBOutlet weak private var userSearchBar: UISearchBar!

    override func viewDidLoad() {
        super.viewDidLoad()
        setup()
    }
...
