...
    private var presenter: UserDetailInputCollection!

    @IBOutlet weak private var iconImageView: UIImageView!
    @IBOutlet weak private var profileLabel: UILabel!
    @IBOutlet weak private var repositoryTableView: UITableView!
    @IBOutlet weak private var repositoryListTitleLabel: UILabel!
    @IBOutlet weak private var loadingView: LoadingView!
    @IBOutlet weak private var noResultLabel: UILabel!

    override func viewDidLoad() {
        super.viewDidLoad()
        presenter.getUser()
        startAnimatingIndicator()

        navigationItem.backButtonTitle = "戻る"
    }

    func inject(presenter: UserDetailInputCollection) {
        self.presenter = presenter
    }
}
...
